--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>Learning Proccess of Hakkı</h1>
             <p>
                 In the table below you can see the titles we will teach to Hakkı, and some details for each title.
-                We are planning to complete this learning proccess in 20-24 days and after that time Hakkı will start
+                We are planning to complete this learning proccess in 17-21 days and after that time Hakkı will start
                 writing code and doing programming with actual production projects.
             </p>
         </div>
@@ -55,8 +55,57 @@
                         <th scope="row">6-7</th>
                         <td>General TS, General Data Types, JSDoc Logic, JSDoc with NPM Packages + NodeJS</td>
                     </tr>
+                    <tr>
+                        <th scope="row">7</th>
+                        <td>NodeJS, NPM</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">8-9</th>
+                        <td>Velo APIs + SPIs, System Design, Software/App Planning, How Does APIs Works, Difference
+                            Between API and SDK, Advanced JS, Cloud Systems and Integrations, Understanding Why's</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">9</th>
+                        <td>Advanced Git + GitHub</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">10</th>
+                        <td>NodeJS App with Express.js</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">11</th>
+                        <td>JWT Tokens, Basic Security</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">12</th>
+                        <td>User Auth, Authorization</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">13</th>
+                        <td>Database Basics, Database Design, NoSQL + SQL, wix-data APIs, weiv-data APIs, MongoDB, Other
+                            Database Types</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">14</th>
+                        <td>Web and Data Security</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">15</th>
+                        <td>State Managers, storeon-velo, State Logic</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">16</th>
+                        <td>Working with 3rd Party APIs, wix-fetch and axios</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">17</th>
+                        <td><strong>First Production Application Task</strong></td>
+                    </tr>
                 </tbody>
             </table>
+
+            <p>This program will probably take around 20 days and after program has completed Hakkı will be ready to
+                write codes in production environment.</p>
         </div>
     </main>
 
